--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -17,7 +17,7 @@ http {
 
     server {
       listen      8000;
-      root        RAILS_ROOT/public; # change me
+      root        /usr/local/nginx/html/http_push/public; # change me
       index       index.html;
 
       location /push/publish {
